--- a/MiniCar/Assembly-CSharp.csproj
+++ b/MiniCar/Assembly-CSharp.csproj
@@ -59,7 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\MoveController.cs" />
+    <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\CarController.cs" />
+    <Compile Include="Assets\Scripts\InputHandler.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>E:/GitHub/MiniCar/MiniCar/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
