数据存取方式修改
使用json来存取关卡信息

--- a/MiniCar/Assembly-CSharp.csproj
+++ b/MiniCar/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CarAudio.cs" />
     <Compile Include="Assets\Scripts\CheckPoint.cs" />
+    <Compile Include="Assets\Scripts\Class\LevelInfoAccess.cs" />
     <Compile Include="Assets\Scripts\Controller\CameraController.cs" />
     <Compile Include="Assets\Scripts\Controller\CarController.cs" />
     <Compile Include="Assets\Scripts\Controller\ChallengeController.cs" />
